# django-uwsgi-template-legacy

./: .coveragerc  .editorconfig  .gitignore  LICENSE  Makefile  README.md  behave.ini  dbdump.py  fabfile.py  global.ini  manage.py  package-lock.json  package.json  project_name.ini  requirements.txt  setup.cfg  static.ini  tasks.py  tox.ini  uwsgi.ini  uwsgi_unbit.ini
client/: config.rb  gulpfile.js
commons/: context_processors.py  test_context_processors.py
deploy/: alpha.yaml  ansible.cfg  beta.yaml.template  deploy.yaml  deploy.yml  hosts  hosts.template  production.yaml.template
project_name/: __init__.py  settings.py  urls.py  wsgi.py
project_name/settings/: __init__.py  alpha.py  base.py  beta.py  develop.py  local.py  master.py  production.py  secret.py-tpl  secret.py.template  testing.py
requirements/: common.ini  common.txt  deploy.ini  deploy.txt  dev.ini  dev.txt  prod.ini  prod.txt  tests.ini  tests.txt
static/css/: config.rb
static/css/scss/: style.scss
templates/: base.html  maintenance.html
tests/: setuptest.py  testproject.py
tests/bdd/: environment.py
tests/login_required/: testcases.py
uwsgiconf/: static.ini
uwsgiconf/local/: emperor.ini.template  global.ini  standalone.ini.template  vassal.ini.template
uwsgiconf/locals/: emperor.ini.template  global.ini  project_name.ini  standalone.ini.template  static.ini
uwsgiconf/remote/: alpha.ini  beta.ini  global.ini  production.ini  static.ini
uwsgiconf/remotes/: alpha.ini  beta.ini  develop.ini  global.ini  master.ini  production.ini  secret.ini.template  static.ini
