[flake8]
exclude = .git,
          ./static,
          */static/*,
          */migrations/*,
          ./media,
          ./templates,
          ./uwsgiconf,
          .*,
ignore = W601
max-line-length = 119
max-complexity = 11

[isort]
combine_as_imports = true
default_section = THIRDPARTY
include_trailing_comma = true
known_first_party = {{project_name}}
line_length = 79
multi_line_output = 5
not_skip = __init__.py

[behave]
paths = tests/bdd/
stdout_capture=no
stderr_capture=no

[metadata]
license-file = LICENSE.md
